--- a/src/app/modules/design-system/components/menu/menu.component.html
+++ b/src/app/modules/design-system/components/menu/menu.component.html
@@ -1,11 +1,17 @@
-<app-button mat-button [matMenuTriggerFor]="menu" [iconName]="icon" [colorScheme]="colorScheme"></app-button>
+<app-button
+  mat-button
+  [matMenuTriggerFor]="menu"
+  [iconName]="icon"
+  [colorScheme]="colorScheme"
+  [buttonSizeY]="'small'"
+></app-button>
 
 <mat-menu #menu="matMenu">
   <app-button
     *ngFor="let action of menuActions"
     [text]="action.translationKey | translate"
     [iconName]="action.icon"
-    [buttonSize]="'full'"
+    [buttonSizeX]="'full'"
     [disabled]="action.disabled"
     [align]="'start'"
     (click)="action.action()"
