--- a/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/category-management-record/category-management-record.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/category-management-record/category-management-record.component.html
@@ -1,36 +1,43 @@
 <app-generic-activity-log-record [icon]="record.icon" [date]="record.date">
   <ng-container [ngSwitch]="record.actionType">
     <ng-container *ngSwitchCase="actionType.Add">
-      <span
-        *ngVar="
-          buildTranslationKey('categoryAdded.budgetType.' + record.budgetType)
-            | translate : { categoryName: record.categoryName } as content
+      <ng-container
+        *ngTemplateOutlet="
+          template;
+          context: {
+            content:
+              buildTranslationKey('categoryAdded.budgetType.' + record.budgetType)
+              | translate : { categoryName: record.categoryName }
+          }
         "
-        class="block truncate"
-        [innerHTML]="content"
-        customTooltip
-        [tooltipTemplate]="template"
-        [showTooltipOnlyOnOverflow]="true"
-      >
-        <ng-template #template>
-          <span [innerHTML]="content"></span>
-        </ng-template>
-      </span>
+      ></ng-container>
     </ng-container>
+
     <ng-container *ngSwitchCase="actionType.Remove">
-      <span
-        [innerHTML]="
-          buildTranslationKey('categoryRemoved.budgetType.' + record.budgetType)
-            | translate : { categoryName: record.categoryName }
+      <ng-container
+        *ngTemplateOutlet="
+          template;
+          context: {
+            content:
+              buildTranslationKey('categoryRemoved.budgetType.' + record.budgetType)
+              | translate : { categoryName: record.categoryName }
+          }
         "
-      ></span>
+      ></ng-container>
     </ng-container>
   </ng-container>
 </app-generic-activity-log-record>
 
-<ng-template #template>
-  {{
-    buildTranslationKey('categoryAdded.budgetType.' + record.budgetType)
-      | translate : { categoryName: record.categoryName }
-  }}
+<ng-template #template let-content="content">
+  <span
+    class="block truncate"
+    customTooltip
+    [tooltipTemplate]="template"
+    [showTooltipOnlyOnOverflow]="true"
+    [innerHTML]="content"
+  >
+    <ng-template #template>
+      <span [innerHTML]="content"></span>
+    </ng-template>
+  </span>
 </ng-template>
