--- a/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/category-value-modal/category-value-modal.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/category-value-modal/category-value-modal.component.html
@@ -22,14 +22,14 @@
 
 <div mat-dialog-actions>
   <app-button
-    [buttonSize]="'auto'"
+    [buttonSizeX]="'auto'"
     [colorScheme]="'transparent-dark'"
     [text]="buildTranslationKey('cancel') | translate"
     (click)="cancelClick()"
   ></app-button>
 
   <app-button
-    [buttonSize]="'medium'"
+    [buttonSizeX]="'medium'"
     [colorScheme]="'charcoal'"
     [text]="buildTranslationKey('add') | translate"
     [loading]="loading$ | async"
