--- a/src/app/modules/shared/components/currency-switcher/currency-switcher.component.html
+++ b/src/app/modules/shared/components/currency-switcher/currency-switcher.component.html
@@ -1,7 +1,9 @@
 <app-menu
+  customTooltip
+  [tooltipText]="buildTranslationKey('tooltip') | translate"
+  [position]="'left'"
+  [tooltipBgColor]="'charcoal'"
   [menuActions]="menuActions$ | async"
   [icon]="icon$ | async"
-  [matTooltip]="buildTranslationKey('tooltip') | translate"
-  [matTooltipPosition]="'below'"
 >
 </app-menu>
