--- a/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/root-value-change-record/root-value-change-record.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/root-value-change-record/root-value-change-record.component.html
@@ -4,7 +4,7 @@
   [date]="record.date"
   [note]="record?.note"
 >
-  <span class="flex justify-between">
+  <span class="flex justify-between flex-wrap">
     <span class="font-main text-charcoal text-base">
       {{ buildTranslationKey('title.' + record.valueType) | translate }}
     </span>
