--- a/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/categories/categories.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/categories/categories.component.html
@@ -11,6 +11,7 @@
       <app-button
         customTooltip
         [tooltipText]="buildTranslationKey('addCategoryButtonTooltip') | translate"
+        [dontDisplayOnScreenWidth]="true"
         [colorScheme]="'charcoal'"
         [iconName]="'plus'"
         [buttonSizeY]="'small'"
@@ -49,7 +50,7 @@
 
   <ng-container *ngIf="!data.isEmpty">
     <ng-container [ngSwitch]="data.currentTab">
-      <cdk-virtual-scroll-viewport *ngSwitchCase="'list'" itemSize="48" class="h-full">
+      <cdk-virtual-scroll-viewport *ngSwitchCase="'list'" itemSize="60" class="h-full">
         <div *cdkVirtualFor="let category of categories$ | async" class="h-15 flex items-center">
           <app-category-item class="w-full" [categoryId]="category.id"></app-category-item>
         </div>
