--- a/src/app/modules/budget-tracker/modules/statistics/components/monthly-statistics/monthly-statistics.component.html
+++ b/src/app/modules/budget-tracker/modules/statistics/components/monthly-statistics/monthly-statistics.component.html
@@ -11,6 +11,7 @@
     [tooltipText]="action.tooltipKey | translate"
     [position]="'top'"
     [tooltipBgColor]="'charcoal'"
+    [dontDisplayOnScreenWidth]="true"
     [colorScheme]="'charcoal'"
     [iconName]="action.icon"
     [buttonSizeY]="'small'"
