--- a/src/app/modules/navigation-bar/components/navigation-bar-item/navigation-bar-item.component.html
+++ b/src/app/modules/navigation-bar/components/navigation-bar-item/navigation-bar-item.component.html
@@ -4,6 +4,7 @@
     [tooltipText]="item.tooltipTranslationKey | translate"
     [position]="'right'"
     [tooltipBgColor]="'green'"
+    [dontDisplayOnScreenWidth]="true"
     [iconName]="item.iconName"
     [colorScheme]="routerLinkActive.isActive ? 'active-navigation-item' : 'transparent-light'"
     [buttonSizeY]="'small'"
