--- a/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.html
@@ -15,6 +15,7 @@
   [tooltipText]="buildTranslationKey('itemTooltip.logout') | translate"
   [position]="'right'"
   [tooltipBgColor]="'green'"
+  [dontDisplayOnScreenWidth]="true"
   [iconName]="'logout'"
   [colorScheme]="'transparent-light'"
   [buttonSizeY]="'small'"
