--- a/src/app/modules/shared/components/currency-switcher/currency-switcher.component.html
+++ b/src/app/modules/shared/components/currency-switcher/currency-switcher.component.html
@@ -3,6 +3,7 @@
   [tooltipText]="buildTranslationKey('tooltip') | translate"
   [position]="'left'"
   [tooltipBgColor]="'charcoal'"
+  [dontDisplayOnScreenWidth]="true"
   [menuActions]="menuActions$ | async"
   [icon]="icon$ | async"
 >
