--- a/src/app/modules/shared/components/language-switcher/language-switcher.component.html
+++ b/src/app/modules/shared/components/language-switcher/language-switcher.component.html
@@ -2,6 +2,7 @@
   customTooltip
   [tooltipText]="buildTranslationKey('tooltip') | translate"
   [position]="'left'"
+  [dontDisplayOnScreenWidth]="true"
   [tooltipBgColor]="'charcoal'"
   [menuActions]="menuActions$ | async"
   [icon]="icon$ | async"
