--- a/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/activity-log/activity-log.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/activity-log/activity-log.component.html
@@ -11,7 +11,10 @@
   </span>
 
   <cdk-virtual-scroll-viewport *ngIf="!isEmpty" itemSize="66" class="h-full w-full !overflow-x-hidden">
-    <div *cdkVirtualFor="let item of itemsToRender$ | async" class="h-16.5 flex items-center w-full">
+    <div
+      *cdkVirtualFor="let item of itemsToRender$ | async; cdkVirtualForTrackBy: trackBy; templateCacheSize: 0"
+      class="h-16.5 flex items-center w-full"
+    >
       <ng-container
         *ngTemplateOutlet="isItemDate(item) ? dateItem : recordItem; context: { item: item }"
       ></ng-container>
