--- a/src/app/modules/design-system/components/info-icon/info-icon.component.html
+++ b/src/app/modules/design-system/components/info-icon/info-icon.component.html
@@ -1,7 +1,7 @@
 <svg-icon
+  customTooltip
   class="text-charcoal hover:text-blue cursor-pointer"
+  [tooltipText]="text"
   [iconName]="'info'"
-  [matTooltip]="text"
-  [matTooltipPosition]="tooltipPosition"
   [size]="size"
 ></svg-icon>
