svgs to folders

--- a/src/app/modules/design-system/components/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/modules/design-system/components/confirmation-modal/confirmation-modal.component.html
@@ -11,14 +11,14 @@
   <app-button
     [colorScheme]="'transparent-dark'"
     [text]="buildTranslationKey('noButton') | translate"
-    [buttonSizeX]="'auto'"
+    [buttonSizeX]="'medium'"
     (click)="closeClick()"
   >
   </app-button>
   <app-button
     [colorScheme]="'charcoal'"
     [text]="buildTranslationKey('yesButton') | translate"
-    [buttonSizeX]="'auto'"
+    [buttonSizeX]="'medium'"
     (click)="data.action(); closeClick()"
   >
   </app-button>
