--- a/src/app/modules/design-system/components/svg-icon/svg-icon.component.html
+++ b/src/app/modules/design-system/components/svg-icon/svg-icon.component.html
@@ -1,3 +1,1 @@
-<svg>
-  <use attr.xlink:href="assets/svg-sprite/sprite.svg#{{ iconName }}"></use>
-</svg>
+<svg preserveAspectRatio="xMinYMid"><use attr.xlink:href="assets/svg-sprite/sprite.svg#{{ iconName }}" /></svg>
