rework lang switcher

--- a/src/app/modules/design-system/components/menu/menu.component.html
+++ b/src/app/modules/design-system/components/menu/menu.component.html
@@ -3,7 +3,9 @@
   [matMenuTriggerFor]="menu"
   [iconName]="icon"
   [colorScheme]="colorScheme"
-  [buttonSizeY]="'small'"
+  [buttonSizeY]="buttonSizeY"
+  [buttonSizeX]="buttonSizeX"
+  [text]="text"
 ></app-button>
 
 <mat-menu #menu="matMenu">
