--- a/src/app/modules/shared/components/language-switcher/language-switcher.component.html
+++ b/src/app/modules/shared/components/language-switcher/language-switcher.component.html
@@ -3,6 +3,9 @@
   [tooltipText]="buildTranslationKey('tooltip') | translate"
   [position]="'left'"
   [dontDisplayOnScreenWidth]="true"
-  [menuActions]="menuActions$ | async"
-  [icon]="icon$ | async"
+  [menuActions]="menuActions"
+  [icon]="icon"
+  [text]="currentLanguageText"
+  [buttonSizeX]="'auto'"
+  [buttonSizeY]="'small'"
 ></app-menu>
