--- a/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/category-item/category-item.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/category-item/category-item.component.html
@@ -11,8 +11,6 @@
 </div>
 
 <div class="flex items-center gap-x-2">
-  <span class="font-main font-bold text-charcoal text-base">
-    {{ category?.value }}&nbsp;{{ currencySymbol$ | async }}
-  </span>
+  <span class="font-main font-bold text-charcoal text-base"> {{ category?.value | currencySymbol }}</span>
   <app-menu [menuActions]="menuActions"></app-menu>
 </div>
