--- a/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/balance-info-card/balance-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/balance-info-card/balance-info-card.component.html
@@ -2,9 +2,9 @@
   [iconBGClass]="'bg-light-blue'"
   [iconName]="'equal-sign'"
   [twoLine]="true"
-  [primaryText]="currentBalance$ | async"
+  [primaryText]="currentBalance$ | async | currencySymbol"
   [secondaryText]="buildTranslationKey('currentBalance') | translate"
-  [additionalPrimaryText]="fullBalance$ | async"
+  [additionalPrimaryText]="fullBalance$ | async | currencySymbol"
   [additionalSecondaryText]="buildTranslationKey('fullBalance') | translate"
   [menuActions]="menuActions$ | async"
   [shouldDisplayMenu]="true"
