--- a/src/app/modules/shared/components/currency-switcher/currency-switcher.component.html
+++ b/src/app/modules/shared/components/currency-switcher/currency-switcher.component.html
@@ -3,7 +3,9 @@
   [tooltipText]="buildTranslationKey('tooltip') | translate"
   [position]="'left'"
   [dontDisplayOnScreenWidth]="true"
-  [menuActions]="menuActions$ | async"
-  [icon]="icon$ | async"
+  [menuActions]="menuActions"
+  [icon]="icon"
+  [text]="currentLanguageText"
+  [buttonSizeX]="'auto'"
 >
 </app-menu>
