--- a/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/expense-info-card/expense-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/expense-info-card/expense-info-card.component.html
@@ -2,7 +2,7 @@
   [iconBGClass]="'bg-light-red'"
   [iconColorClass]="'text-red'"
   [iconName]="'arrow-down'"
-  [primaryText]="expense$ | async"
+  [primaryText]="expense$ | async | currencySymbol"
   [secondaryText]="buildTranslationKey('title') | translate"
   [menuActions]="menuActions"
   [shouldDisplayMenu]="shouldDisplayMenu$ | async"
