--- a/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/income-info-card/income-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/income-info-card/income-info-card.component.html
@@ -2,7 +2,7 @@
   [iconBGClass]="'bg-light-green'"
   [iconColorClass]="'text-dark-green'"
   [iconName]="'arrow-up'"
-  [primaryText]="income$ | async"
+  [primaryText]="income$ | async | currencySymbol"
   [secondaryText]="buildTranslationKey('title') | translate"
   [menuActions]="menuActions"
   [shouldDisplayMenu]="shouldDisplayMenu$ | async"
