--- a/src/app/modules/budget-tracker/budget-tracker.component.html
+++ b/src/app/modules/budget-tracker/budget-tracker.component.html
@@ -7,6 +7,6 @@
   <app-loader [colorMode]="'dark'" [size]="'main-loader'"></app-loader>
 </div>
 
-<div class="route main p-6 w-full bg-dirty-white">
+<div class="animated-route main p-6 w-full bg-dirty-white">
   <router-outlet></router-outlet>
 </div>
