--- a/src/app/modules/budget-tracker/budget-tracker.component.scss
+++ b/src/app/modules/budget-tracker/budget-tracker.component.scss
@@ -1,15 +1,11 @@
 :host {
-  @apply flex h-full relative;
+  @apply flex h-full relative overflow-hidden;
 
   @media (max-width: 480px) {
     @apply flex-col-reverse;
 
     .main {
-      @apply flex flex-1 overflow-auto;
-    }
-
-    .route {
-      view-transition-name: route;
+      @apply flex flex-1;
     }
   }
 }
